--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@discordjs/opus": "^0.4.0",
     "@types/node": "^14.14.31",
     "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
     "opusscript": "^0.0.8",
     "typescript": "^4.2.2",
